KIALI-2639 Support 3scale adapter Istio config (#1050)
* KIALI-2639 Support 3scale adapter Istio config

* Fix format issues

* Update Swagger docs

* Missing GET endpoint and tests

* Do not use app label for 3scale adapter

* Update swagger

* Remove Istio Rules linked with a Handler when Handler is deleted

* Make lint happy

* Format code correctly
