# routing/routes.go
@@ -987,6 +987,182 @@ func NewRoutes() (r *Routes) {
 			handlers.PodLogs,
 			true,
 		},
+		// swagger:route GET /threescale getThreeScaleInfo
+		// ---
+		// Endpoint to check if threescale adapter is present in the cluster and if user can write adapter config
+		//
+		//		Produces:
+		//		- application/json
+		//
+		//		Schemes: http, https
+		//
+		// responses:
+		//		500: internalError
+		//		200: threeScaleInfoResponse
+		{
+			"ThreeScaleInfo",
+			"GET",
+			"/api/threescale",
+			handlers.ThreeScaleStatus,
+			true,
+		},
+		// swagger:route GET /threescale/handlers getThreeScaleHandlers
+		// ---
+		// Endpoint to fetch threescale handlers generated from Kiali
+		//
+		// 		Produces:
+		//		- application/json
+		//
+		//		Schemes: http, https
+		//
+		// responses:
+		//		500: internalError
+		//		200: threeScaleHandlersResponse
+		{
+			"ThreeScaleHandlersList",
+			"GET",
+			"/api/threescale/handlers",
+			handlers.ThreeScaleHandlersList,
+			true,
+		},
+		// swagger:route POST /threescale/handlers postThreeScaleHandlers
+		// ---
+		// Endpoint to create a new threescale handler+instance generated by Kiali
+		//
+		//		Produces:
+		//		- application/json
+		//
+		//		Schemes: http, https
+		//
+		// responses:
+		//		500: internalError
+		//		200: threeScaleHandlersResponse
+		{
+			"ThreeScaleHandlersCreate",
+			"POST",
+			"/api/threescale/handlers",
+			handlers.ThreeScaleHandlersCreate,
+			true,
+		},
+		// swagger:route PATCH /threescale/handlers/{threescaleHandlerName} patchThreeScaleHandler
+		// ---
+		// Endpoint to update an existing threescale handler generated by Kiali
+		//
+		//		Produces:
+		//		- application/json
+		//
+		//		Schemes: http, https
+		//
+		// responses:
+		//		500: internalError
+		//		404: notFoundError
+		//		200: threeScaleHandlersResponse
+		{
+			"ThreeScaleHandlerPatch",
+			"PATCH",
+			"/api/threescale/handlers/{threescaleHandlerName}",
+			handlers.ThreeScaleHandlersUpdate,
+			true,
+		},
+		// swagger:route DELETE /threescale/handlers/{threescaleHandlerName} deleteThreeScaleHandler
+		// ---
+		// Endpoint to delete an existing threescale handler+instance generated by Kiali
+		//
+		//		Produces:
+		//		- application/json
+		//
+		//		Schemes: http, https
+		//
+		// responses:
+		//		500: internalError
+		//		404: notFoundError
+		//		200: threeScaleHandlersResponse
+		{
+			"ThreeScaleHandlerDelete",
+			"DELETE",
+			"/api/threescale/handlers/{threescaleHandlerName}",
+			handlers.ThreeScaleHandlersDelete,
+			true,
+		},
+		// swagger:route GET /threescale/namespaces/{namespace}/services/{service} getThreeScaleService
+		// ---
+		// Endpoint to get an existing threescale rule for a given service
+		//
+		//		Produces:
+		//		- application/json
+		//
+		//		Schemes: http, https
+		//
+		// responses:
+		// 		500: internalError
+		//		404: notFoundError
+		//		200: threeScaleRuleResponse
+		{
+			"ThreeScaleServiceRuleGet",
+			"GET",
+			"/api/threescale/namespaces/{namespace}/services/{service}",
+			handlers.ThreeScaleServiceRuleGet,
+			true,
+		},
+		// swagger:route POST /threescale/namespaces/{namespace}/services postThreeScaleService
+		// ---
+		// Endpoint to create a new threescale rule for a given service
+		//
+		//		Produces:
+		//		- application/json
+		//
+		//		Schemes: http, https
+		//
+		// responses:
+		// 		500: internalError
+		//		200: threeScaleRuleResponse
+		{
+			"ThreeScaleServiceRuleCreate",
+			"POST",
+			"/api/threescale/namespaces/{namespace}/services",
+			handlers.ThreeScaleServiceRuleCreate,
+			true,
+		},
+		// swagger:route PATCH /threescale/namespaces/{namespace}/services/{service} patchThreeScaleService
+		// ---
+		// Endpoint to update an existing threescale rule for a given service
+		//
+		//		Produces:
+		//		- application/json
+		//
+		//		Schemes: http, https
+		//
+		// responses:
+		// 		500: internalError
+		//		404: notFoundError
+		//		200: threeScaleRuleResponse
+		{
+			"ThreeScaleServiceRuleUpdate",
+			"PATCH",
+			"/api/threescale/namespaces/{namespace}/services/{service}",
+			handlers.ThreeScaleServiceRuleUpdate,
+			true,
+		},
+		// swagger:route DELETE /threescale/namespaces/{namespace}/services/{service} deleteThreeScaleService
+		// ---
+		// Endpoint to delete an existing threescale rule for a given service
+		//
+		//		Produces:
+		//		- application/json
+		//
+		//		Schemes: http, https
+		//
+		// responses:
+		// 		500: internalError
+		//		404: notFoundError
+		//		200
+		{
+			"ThreeScaleServiceRuleDelete",
+			"DELETE",
+			"/api/threescale/namespaces/{namespace}/services/{service}",
+			handlers.ThreeScaleServiceRuleDelete,
+			true,
+		},
 	}
 
 	return
